--- a/package.json
+++ b/package.json
@@ -7,15 +7,20 @@
   },
   "dependencies": {
     "next": "latest",
+    "nookies": "^2.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^5.3.5"
+    "react-modal": "^3.16.1",
+    "styled-components": "^5.3.5",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "@types/react-modal": "^3.13.1",
     "@types/styled-components": "^5.1.25",
+    "@types/uuid": "^9.0.0",
     "typescript": "^4.7.4"
   }
 }
